Tue Feb  8 00:19:02 2005  Tanaka Akira  <akr@m17n.org>

	* lib/resolv.rb (Resolv::DNS::Name#subdomain_of?): new method.
	  (Resolv::DNS::Name#inspect): ditto.
	  Suggested by Sam Roberts.  [ruby-talk:129086]

Mon Feb  7 23:14:11 2005  Tanaka Akira  <akr@m17n.org>

	* io.c (io_getc): flush rb_stdout before read fro stdin, which is
	  connected to a tty.  [ruby-core:4378]

	* rubyio.h (FMODE_TTY): renamed from FMODE_LINEBUF.

Mon Feb  7 02:13:05 2005  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/socket/extconf.rb (sockaddr_storage): winsock2.h have the
	  definition of struct sockaddr_storage, but socket.c doesn't
	  include it because this version of ruby still has binary level
	  compatibility with winsock1.

Mon Feb  7 01:22:50 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb (extract_makefile): extract previously collected
	  informations from existing Makefile.

	* ext/socket/extconf.rb: check if getaddrinfo() works fine only when
	  wide-getaddrinfo option is not given.  fixed: [ruby-dev:25422]

	* ext/tk/extconf.rb: separate tkutil configuration.

	* lib/mkmf.rb ($extmk): check if under ext directory.

	* lib/mkmf.rb (Logging.postpone): allow recursive operation.

	* lib/mkmf.rb (try_constant): make sure if really a constant, reduce
	  the number of times of compile.

	* lib/mkmf.rb (have_macro, have_var, byte_order): new functions.

	* lib/mkmf.rb (find_library): allow directory list with separators.

	* lib/mkmf.rb (arg_config): manage provided configuration options.

	* lib/mkmf.rb (dir_config): accept arrays of directory names as
	  default values.

	* lib/mkmf.rb (with_cppflags, with_cflags, with_ldflags): keep flags
	  modified if the block returned true.

Sun Feb  6 19:20:05 2005  NAKAMURA Usaku  <usa@ruby-lang.org>

	* eval.c (stack_extend): add prototype because VC++8 doesn't
	  accept __declspec(noinline) with K&R style function definitions.

Sun Feb  6 13:56:19 2005  Tadayoshi Funaba  <tadf@dotrb.org>
