@@ -1,5 +1,5 @@
 /* C code produced by gperf version 2.7.2 */
-/* Command-line: gperf -p -j1 -i 1 -g -o -t -N rb_reserved_word -k'1,3,$' /home/aamine/c/ruby/keywords  */
+/* Command-line: gperf -p -j1 -i 1 -g -o -t -N rb_reserved_word -k'1,3,$' keywords  */
 struct kwtable {char *name; int id[2]; enum lex_state_e state;};
 struct kwtable *rb_reserved_word _((const char *, unsigned int));
 #ifndef RIPPER
@@ -81,43 +81,43 @@ rb_reserved_word (str, len)
       {""}, {""}, {""}, {""}, {""}, {""},
       {"end", {kEND, kEND}, EXPR_END},
       {"else", {kELSE, kELSE}, EXPR_BEG},
-      {"case", {kCASE, kCASE}, EXPR_BEG},
+      {"case", {kCASE, kCASE}, EXPR_VALUE},
       {"ensure", {kENSURE, kENSURE}, EXPR_BEG},
-      {"module", {kMODULE, kMODULE}, EXPR_BEG},
-      {"elsif", {kELSIF, kELSIF}, EXPR_BEG},
+      {"module", {kMODULE, kMODULE}, EXPR_VALUE},
+      {"elsif", {kELSIF, kELSIF}, EXPR_VALUE},
       {"def", {kDEF, kDEF}, EXPR_FNAME},
       {"rescue", {kRESCUE, kRESCUE_MOD}, EXPR_MID},
-      {"not", {kNOT, kNOT}, EXPR_BEG},
+      {"not", {kNOT, kNOT}, EXPR_VALUE},
       {"then", {kTHEN, kTHEN}, EXPR_BEG},
       {"yield", {kYIELD, kYIELD}, EXPR_ARG},
-      {"for", {kFOR, kFOR}, EXPR_BEG},
+      {"for", {kFOR, kFOR}, EXPR_VALUE},
       {"self", {kSELF, kSELF}, EXPR_END},
       {"false", {kFALSE, kFALSE}, EXPR_END},
       {"retry", {kRETRY, kRETRY}, EXPR_END},
       {"return", {kRETURN, kRETURN}, EXPR_MID},
       {"true", {kTRUE, kTRUE}, EXPR_END},
-      {"if", {kIF, kIF_MOD}, EXPR_BEG},
+      {"if", {kIF, kIF_MOD}, EXPR_VALUE},
       {"defined?", {kDEFINED, kDEFINED}, EXPR_ARG},
       {"super", {kSUPER, kSUPER}, EXPR_ARG},
       {"undef", {kUNDEF, kUNDEF}, EXPR_FNAME},
       {"break", {kBREAK, kBREAK}, EXPR_MID},
-      {"in", {kIN, kIN}, EXPR_BEG},
+      {"in", {kIN, kIN}, EXPR_VALUE},
       {"do", {kDO, kDO}, EXPR_BEG},
       {"nil", {kNIL, kNIL}, EXPR_END},
-      {"until", {kUNTIL, kUNTIL_MOD}, EXPR_BEG},
-      {"unless", {kUNLESS, kUNLESS_MOD}, EXPR_BEG},
-      {"or", {kOR, kOR}, EXPR_BEG},
+      {"until", {kUNTIL, kUNTIL_MOD}, EXPR_VALUE},
+      {"unless", {kUNLESS, kUNLESS_MOD}, EXPR_VALUE},
+      {"or", {kOR, kOR}, EXPR_VALUE},
       {"next", {kNEXT, kNEXT}, EXPR_MID},
-      {"when", {kWHEN, kWHEN}, EXPR_BEG},
+      {"when", {kWHEN, kWHEN}, EXPR_VALUE},
       {"redo", {kREDO, kREDO}, EXPR_END},
-      {"and", {kAND, kAND}, EXPR_BEG},
+      {"and", {kAND, kAND}, EXPR_VALUE},
       {"begin", {kBEGIN, kBEGIN}, EXPR_BEG},
       {"__LINE__", {k__LINE__, k__LINE__}, EXPR_END},
       {"class", {kCLASS, kCLASS}, EXPR_CLASS},
       {"__FILE__", {k__FILE__, k__FILE__}, EXPR_END},
       {"END", {klEND, klEND}, EXPR_END},
       {"BEGIN", {klBEGIN, klBEGIN}, EXPR_END},
-      {"while", {kWHILE, kWHILE_MOD}, EXPR_BEG},
+      {"while", {kWHILE, kWHILE_MOD}, EXPR_VALUE},
       {""}, {""}, {""}, {""}, {""}, {""}, {""}, {""}, {""},
       {""},
       {"alias", {kALIAS, kALIAS}, EXPR_FNAME}
